seaqt/QtWidgets/gen_qundoview.nim

proc fQUndoView_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QUndoView_virtualbase_nativeEvent".}
proc fcQUndoView_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_nativeEvent".}
proc fQUndoView_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QUndoView_virtualbase_metric".}
proc fcQUndoView_override_virtual_metric(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_metric".}
proc fQUndoView_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QUndoView_virtualbase_initPainter".}
proc fcQUndoView_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_initPainter".}
proc fQUndoView_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QUndoView_virtualbase_redirected".}
proc fcQUndoView_override_virtual_redirected(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_redirected".}
proc fQUndoView_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QUndoView_virtualbase_sharedPainter".}
proc fcQUndoView_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_sharedPainter".}
proc fQUndoView_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_childEvent".}
proc fcQUndoView_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_childEvent".}
proc fQUndoView_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_customEvent".}
proc fcQUndoView_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_customEvent".}
proc fQUndoView_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QUndoView_virtualbase_connectNotify".}
proc fcQUndoView_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_connectNotify".}
proc fQUndoView_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QUndoView_virtualbase_disconnectNotify".}
proc fcQUndoView_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_disconnectNotify".}
proc fcQUndoView_staticMetaObject(): pointer {.importc: "QUndoView_staticMetaObject".}
proc fcQUndoView_delete(self: pointer) {.importc: "QUndoView_delete".}


func init*(T: type gen_qundoview_types.QUndoView, h: ptr cQUndoView): gen_qundoview_types.QUndoView =
  T(h: h)
proc create*(T: type gen_qundoview_types.QUndoView, parent: gen_qwidget_types.QWidget): gen_qundoview_types.QUndoView =
  gen_qundoview_types.QUndoView.init(fcQUndoView_new(parent.h))

proc create*(T: type gen_qundoview_types.QUndoView, ): gen_qundoview_types.QUndoView =
  gen_qundoview_types.QUndoView.init(fcQUndoView_new2())

proc create*(T: type gen_qundoview_types.QUndoView, stack: gen_qundostack_types.QUndoStack): gen_qundoview_types.QUndoView =
  gen_qundoview_types.QUndoView.init(fcQUndoView_new3(stack.h))

proc create*(T: type gen_qundoview_types.QUndoView, group: gen_qundogroup_types.QUndoGroup): gen_qundoview_types.QUndoView =
  gen_qundoview_types.QUndoView.init(fcQUndoView_new4(group.h))

proc create*(T: type gen_qundoview_types.QUndoView, stack: gen_qundostack_types.QUndoStack, parent: gen_qwidget_types.QWidget): gen_qundoview_types.QUndoView =
  gen_qundoview_types.QUndoView.init(fcQUndoView_new5(stack.h, parent.h))

proc create*(T: type gen_qundoview_types.QUndoView, group: gen_qundogroup_types.QUndoGroup, parent: gen_qwidget_types.QWidget): gen_qundoview_types.QUndoView =
  gen_qundoview_types.QUndoView.init(fcQUndoView_new6(group.h, parent.h))

proc metaObject*(self: gen_qundoview_types.QUndoView, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQUndoView_metaObject(self.h))

proc metacast*(self: gen_qundoview_types.QUndoView, param1: cstring): pointer =
  fcQUndoView_metacast(self.h, param1)

proc metacall*(self: gen_qundoview_types.QUndoView, param1: cint, param2: cint, param3: pointer): cint =
  fcQUndoView_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qundoview_types.QUndoView, s: cstring): string =
  let v_ms = fcQUndoView_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qundoview_types.QUndoView, s: cstring): string =
  let v_ms = fcQUndoView_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc stack*(self: gen_qundoview_types.QUndoView, ): gen_qundostack_types.QUndoStack =
  gen_qundostack_types.QUndoStack(h: fcQUndoView_stack(self.h))

proc group*(self: gen_qundoview_types.QUndoView, ): gen_qundogroup_types.QUndoGroup =
  gen_qundogroup_types.QUndoGroup(h: fcQUndoView_group(self.h))

proc setEmptyLabel*(self: gen_qundoview_types.QUndoView, label: string): void =
  fcQUndoView_setEmptyLabel(self.h, struct_miqt_string(data: label, len: csize_t(len(label))))

proc emptyLabel*(self: gen_qundoview_types.QUndoView, ): string =
  let v_ms = fcQUndoView_emptyLabel(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setCleanIcon*(self: gen_qundoview_types.QUndoView, icon: gen_qicon_types.QIcon): void =
  fcQUndoView_setCleanIcon(self.h, icon.h)

proc cleanIcon*(self: gen_qundoview_types.QUndoView, ): gen_qicon_types.QIcon =
  gen_qicon_types.QIcon(h: fcQUndoView_cleanIcon(self.h))

proc setStack*(self: gen_qundoview_types.QUndoView, stack: gen_qundostack_types.QUndoStack): void =
  fcQUndoView_setStack(self.h, stack.h)

proc setGroup*(self: gen_qundoview_types.QUndoView, group: gen_qundogroup_types.QUndoGroup): void =
  fcQUndoView_setGroup(self.h, group.h)

proc tr*(_: type gen_qundoview_types.QUndoView, s: cstring, c: cstring): string =
  let v_ms = fcQUndoView_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qundoview_types.QUndoView, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQUndoView_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qundoview_types.QUndoView, s: cstring, c: cstring): string =
  let v_ms = fcQUndoView_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qundoview_types.QUndoView, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQUndoView_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc QUndoViewmetaObject*(self: gen_qundoview_types.QUndoView, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fQUndoView_virtualbase_metaObject(self.h))

type QUndoViewmetaObjectProc* = proc(): gen_qobjectdefs_types.QMetaObject
proc onmetaObject*(self: gen_qundoview_types.QUndoView, slot: QUndoViewmetaObjectProc) =
  # TODO check subclass
  var tmp = new QUndoViewmetaObjectProc
  tmp[] = slot
  GC_ref(tmp)
  fcQUndoView_override_virtual_metaObject(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QUndoView_metaObject(self: ptr cQUndoView, slot: int): pointer {.exportc: "miqt_exec_callback_QUndoView_metaObject ".} =
  var nimfunc = cast[ptr QUndoViewmetaObjectProc](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn.h
proc QUndoViewmetacast*(self: gen_qundoview_types.QUndoView, param1: cstring): pointer =
  fQUndoView_virtualbase_metacast(self.h, param1)

type QUndoViewmetacastProc* = proc(param1: cstring): pointer
proc onmetacast*(self: gen_qundoview_types.QUndoView, slot: QUndoViewmetacastProc) =
  # TODO check subclass
  var tmp = new QUndoViewmetacastProc
  tmp[] = slot
  GC_ref(tmp)
  fcQUndoView_override_virtual_metacast(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QUndoView_metacast(self: ptr cQUndoView, slot: int, param1: cstring): pointer {.exportc: "miqt_exec_callback_QUndoView_metacast ".} =
  var nimfunc = cast[ptr QUndoViewmetacastProc](cast[pointer](slot))
  let slotval1 = (param1)


  let virtualReturn = nimfunc[](slotval1 )

  virtualReturn
proc QUndoViewmetacall*(self: gen_qundoview_types.QUndoView, param1: cint, param2: cint, param3: pointer): cint =
  fQUndoView_virtualbase_metacall(self.h, cint(param1), param2, param3)

type QUndoViewmetacallProc* = proc(param1: cint, param2: cint, param3: pointer): cint
proc onmetacall*(self: gen_qundoview_types.QUndoView, slot: QUndoViewmetacallProc) =
  # TODO check subclass
  var tmp = new QUndoViewmetacallProc
  tmp[] = slot
  GC_ref(tmp)
  fcQUndoView_override_virtual_metacall(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QUndoView_metacall(self: ptr cQUndoView, slot: int, param1: cint, param2: cint, param3: pointer): cint {.exportc: "miqt_exec_callback_QUndoView_metacall ".} =
  var nimfunc = cast[ptr QUndoViewmetacallProc](cast[pointer](slot))
  let slotval1 = cint(param1)

  let slotval2 = param2

  let slotval3 = param3


  let virtualReturn = nimfunc[](slotval1, slotval2, slotval3 )

  virtualReturn
proc QUndoViewvisualRect*(self: gen_qundoview_types.QUndoView, index: gen_qabstractitemmodel_types.QModelIndex): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fQUndoView_virtualbase_visualRect(self.h, index.h))

type QUndoViewvisualRectProc* = proc(index: gen_qabstractitemmodel_types.QModelIndex): gen_qrect_types.QRect
proc onvisualRect*(self: gen_qundoview_types.QUndoView, slot: QUndoViewvisualRectProc) =
  # TODO check subclass
  var tmp = new QUndoViewvisualRectProc
  tmp[] = slot
  GC_ref(tmp)
  fcQUndoView_override_virtual_visualRect(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QUndoView_visualRect(self: ptr cQUndoView, slot: int, index: pointer): pointer {.exportc: "miqt_exec_callback_QUndoView_visualRect ".} =
  var nimfunc = cast[ptr QUndoViewvisualRectProc](cast[pointer](slot))
  let slotval1 = gen_qabstractitemmodel_types.QModelIndex(h: index)


  let virtualReturn = nimfunc[](slotval1 )

  virtualReturn.h
proc QUndoViewscrollTo*(self: gen_qundoview_types.QUndoView, index: gen_qabstractitemmodel_types.QModelIndex, hint: cint): void =
  fQUndoView_virtualbase_scrollTo(self.h, index.h, cint(hint))

type QUndoViewscrollToProc* = proc(index: gen_qabstractitemmodel_types.QModelIndex, hint: cint): void
proc onscrollTo*(self: gen_qundoview_types.QUndoView, slot: QUndoViewscrollToProc) =
  # TODO check subclass
  var tmp = new QUndoViewscrollToProc
  tmp[] = slot
  GC_ref(tmp)
  fcQUndoView_override_virtual_scrollTo(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QUndoView_scrollTo(self: ptr cQUndoView, slot: int, index: pointer, hint: cint): void {.exportc: "miqt_exec_callback_QUndoView_scrollTo ".} =
  var nimfunc = cast[ptr QUndoViewscrollToProc](cast[pointer](slot))
  let slotval1 = gen_qabstractitemmodel_types.QModelIndex(h: index)

  let slotval2 = cint(hint)


  nimfunc[](slotval1, slotval2)
proc QUndoViewindexAt*(self: gen_qundoview_types.QUndoView, p: gen_qpoint_types.QPoint): gen_qabstractitemmodel_types.QModelIndex =
  gen_qabstractitemmodel_types.QModelIndex(h: fQUndoView_virtualbase_indexAt(self.h, p.h))

type QUndoViewindexAtProc* = proc(p: gen_qpoint_types.QPoint): gen_qabstractitemmodel_types.QModelIndex
proc onindexAt*(self: gen_qundoview_types.QUndoView, slot: QUndoViewindexAtProc) =
  # TODO check subclass
  var tmp = new QUndoViewindexAtProc
  tmp[] = slot
  GC_ref(tmp)
  fcQUndoView_override_virtual_indexAt(self.h, cast[int](addr tmp[]))
